updates in publicaitons and people

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -26,9 +26,9 @@
 
 <body>
   <aside>
-    <a href="/">
+    <!-- <a href="/">
       <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/logo.png" alt="{{ SITETITLE }}" title="{{ SITETITLE }}">
-    </a>
+    </a> -->
     <h1><a href="/">{{ SITETITLE }}</a></h1>
     {% if SITESUBTITLE %}<p class='subtitle'>{{ SITESUBTITLE }}</p>{% endif %}
     <nav>
