--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -48,8 +48,7 @@
     <footer>
       <p><small>
         content licensed <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">cc-by-sa</a>
-        <span class='break'>—</span> ©2019 {{ AUTHOR }} <span class='break'>—</span>
-        unless <a rel="license" href='/copyright.html'>indicated otherwise</a>
+        <span class='break'>—</span> ©2019 {{ AUTHOR }} <span class='break'></span>
       </small></p>
     </footer>
   </main>
