--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -428,7 +428,6 @@ aside a.active {
 /* Members Page */
 .members {
   align-items: flex-end;
-  background: repeating-linear-gradient(180deg, #fff 0px, #f6f6f6 498px, #fff 500px, #fff calc(500px + 6em));
   border: 0 !important; /* null both border-tops and -bottoms */
   display: flex;
   flex-wrap: wrap;
@@ -447,7 +446,7 @@ aside a.active {
 }
 .members .mugshot {
   background-repeat: no-repeat;
-  background-position: center bottom;
+  background-position: center center;
   height: 500px;
 }
 .members .info {
@@ -476,9 +475,7 @@ aside a.active {
   margin: 0;
 }
 
-.members.alumni {
-  background: repeating-linear-gradient(180deg, #fff 0px, #f6f6f6 308px, #fff 310px, #fff calc(310px + 4em));
-}
+
 .members.alumni .mem {
   height: calc(310px + 4em);
 }
@@ -491,23 +488,8 @@ aside a.active {
   .members.alumni .mem { flex-basis: 48%; }
 }
 
-@media screen and (max-width: 767px) {
-  .members.grills {
-    background: repeating-linear-gradient(180deg, #fff 0px, #f6f6f6 498px, #fff 500px, #fff calc(500px + 2em));
-  }
-  .members.grills .mem {
-    border-bottom: 1px solid #d0d0d0; /* grills don't have social links to act as a border */
-    height: calc(500px + 2em);
-  }
-  .members.grills .mem:last-of-type {
-    border-bottom: 0;
-  }
-}
 
 @media screen and (min-width: 768px) {
-  .members {
-    background: repeating-linear-gradient(180deg, #fff 0px, #f6f6f6 540px);
-  }
   .members .mem {
     flex-basis: 48%;
     height: 540px;
@@ -543,15 +525,12 @@ aside a.active {
     text-align: left;
   }
 
-  .members.alumni {
-    background: repeating-linear-gradient(180deg, #fff 0px, #f6f6f6 350px);
-  }
   .members.alumni .mem {
-    height: 350px;
+    height: 500px;
     flex-basis: 32%;
   }
   .members.alumni .mem .mugshot {
-    height: 350px;
+    height: 500px;
   }
 }
 
