--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -13,7 +13,7 @@
   <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/manifest.json">
+  <!-- <link rel="manifest" href="/manifest.json"> -->
   <meta name="theme-color" content="#000000">
 
   <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/style.css">
@@ -52,5 +52,6 @@
       </small></p>
     </footer>
   </main>
+  
 </body>
 </html>
