--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -103,9 +103,14 @@ h3 { font-size: 1.6em; }
 h4 { font-size: 1.36em; }
 h5 { font-size: 1.2em; }
 h6 { font-size: 1.1em; }
+h7 { font-size: 0.9em; }
 
 p {
   margin: 2em 0;
+}
+
+small {
+  font-size: small;
 }
 
 article h1 {
@@ -132,23 +137,36 @@ section, div.section {
 }
 
 @media screen and (min-width: 768px) {
-  aside {
-    width: 25%;
+  aside{
+    width: 18%;
     height: 100%;
     position: fixed; top: 0; left: 0;
     overflow-x: hidden;
     overflow-y: auto;
   }
+
   main {
-    width: 75%;
-    position: absolute; top: 0; left: 25%;
+    width: 65%;
+    position: absolute; top: 0; left: 18%;
     overflow-x: hidden;
     overflow-y: hidden;
   }
+  
+  #right{
+    width: 17%;
+    height: 100%;
+    padding-right: 20px;
+    padding-top: 0px;
+    position: fixed; top: 0; left: 83%;
+    text-align: center;
+  }
+  
+  
 }
+
 @media screen and (min-width: 1000px) {
   article {
-    margin: 0 8vw;
+    margin: 0 6vw;
   }
   section, div.section {
     margin: 0 -8vw;
@@ -157,7 +175,7 @@ section, div.section {
 }
 @media screen and (min-width: 1800px) {
   article {
-    margin: 0 12vw;
+    margin: 0 6vw;
   }
   section, div.section {
     margin: 0 -12vw;
