--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -25,7 +25,8 @@
 </head>
 
 <body>
-  <aside>
+
+  <aside id='left'>
     <a href="/">
       <img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/logo.png" alt="{{ SITETITLE }}" title="{{ SITETITLE }}">
     </a>
@@ -41,6 +42,52 @@
     </nav>
   </aside>
 
+
+  <aside id='right'>
+	  <h5 align='center'><strong>Computational <br> Psychology</strong></h5>
+
+	  <p>
+		  Prof. Dr. Marianne Maertens <br>
+	  <small>
+		 Room: MAR 5.018 <br>
+	  Phone: +49 (0)30/314-24478  <br>
+	  Email: marianne.maertens@tu-berlin.de<br>
+	  Office hours: on appointment<br>
+	  </small>
+	  </p>
+  	  <hr>
+
+  	  <h5 align='center'><strong>Administration</strong></h5>
+
+	  <p>		  
+		  Bianca del Mestre<br>
+	  <small>
+		 Room: MAR 5.019<br>
+	  Phone:   <br>
+	  Email: bianca.delmestre@tu-berlin.de<br>
+	  Office hours: Mon-Wed 10 a.m.-12 p.m.<br>
+	  </small>
+	  </p>
+	  
+	  <hr>
+	  <h5 align='center'><strong>Address</strong></h5>
+
+	  <p> 
+	  <small>
+	  Technische Universität Berlin<br>
+	  Institute of Software Engineering <br>
+	  and Theoretical Computer Science<br>
+	  Dept. Computational Psychology<br>
+	  Sek. MAR 5-5<br>
+	  Marchstr. 23, 10587 Berlin<br>
+	  Germany
+	  </small>
+	  </p>
+	  
+
+	  
+  </aside>
+    
   <main>
     <div id='content'>
     {% block content %}{% endblock %}
