changing  color palette to TU design

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -44,9 +44,8 @@
 
 
   <aside id='right'>
-	  <h5 align='center'><strong>Computational <br> Psychology</strong></h5>
-
-	  <p>
+	  <h5 style="margin-block-end: 0;"><strong>Computational <br> Psychology</strong></h5>
+	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
 		  Prof. Dr. Marianne Maertens <br>
 	  <small>
 		 Room: MAR 5.018 <br>
@@ -55,24 +54,24 @@
 	  Office hours: on appointment<br>
 	  </small>
 	  </p>
-  	  <hr>
+  	  <!-- <hr> -->
 
-  	  <h5 align='center'><strong>Administration</strong></h5>
+  	  <h5 style="margin-block-end: 0;"><strong>Administration</strong></h5>
 
-	  <p>		  
+	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
 		  Bianca del Mestre<br>
 	  <small>
 		 Room: MAR 5.019<br>
-	  Phone:   <br>
+	  Phone: +49 (0)30 314-75771<br>
 	  Email: bianca.delmestre@tu-berlin.de<br>
 	  Office hours: Mon-Wed 10 a.m.-12 p.m.<br>
 	  </small>
 	  </p>
 	  
-	  <hr>
-	  <h5 align='center'><strong>Address</strong></h5>
+	  <!-- <hr> -->
+	  <h5 style="margin-block-end: 0;"><strong>Address</strong></h5>
 
-	  <p> 
+	 <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
 	  <small>
 	  Technische Universität Berlin<br>
 	  Institute of Software Engineering <br>
