--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -71,11 +71,11 @@
 .icon-fax::before { content: '\f1ac'; }
 
 a {
-  color: #d9411e;
+  color: #C50E1F;
   text-decoration: none;
 }
 a:hover {
-  color: #ff5a09;
+  color: #C50E1F;
 }
 
 body, html {
@@ -109,6 +109,10 @@ p {
   margin: 2em 0;
 }
 
+p #right{
+  margin: 0em 0;
+}
+
 small {
   font-size: small;
 }
@@ -138,27 +142,30 @@ section, div.section {
 
 @media screen and (min-width: 768px) {
   aside{
-    width: 18%;
+    width: 15%;
     height: 100%;
     position: fixed; top: 0; left: 0;
     overflow-x: hidden;
     overflow-y: auto;
+    /*border-right: 4px solid #C50E1F;*/
   }
 
   main {
     width: 65%;
-    position: absolute; top: 0; left: 18%;
+    position: absolute; top: 0; left: 15%;
     overflow-x: hidden;
     overflow-y: hidden;
   }
   
   #right{
-    width: 17%;
+    width: 20%;
     height: 100%;
     padding-right: 20px;
     padding-top: 0px;
-    position: fixed; top: 0; left: 83%;
-    text-align: center;
+    position: fixed; top: 0; left: 80%;
+    text-align: left;
+    padding-left: 20px;
+    border-left: 4px solid #C50E1F;
   }
   
   
@@ -166,7 +173,7 @@ section, div.section {
 
 @media screen and (min-width: 1000px) {
   article {
-    margin: 0 6vw;
+    margin: 0 5vw;
   }
   section, div.section {
     margin: 0 -8vw;
@@ -175,7 +182,7 @@ section, div.section {
 }
 @media screen and (min-width: 1800px) {
   article {
-    margin: 0 6vw;
+    margin: 0 5vw;
   }
   section, div.section {
     margin: 0 -12vw;
@@ -188,11 +195,12 @@ section, div.section {
  *  Modules
  */
 aside {
-  background-color: #333;
-  color: #fff;
+  background-color: #fff;
+  color: #333;
   margin: 0;
   padding: 20px 0;
-  text-align: center;
+  text-align: left;
+  margin: 2%;
 }
 aside img {
   display: none;
@@ -204,11 +212,11 @@ aside img {
   aside img { display: unset; }
 }
 aside a {
-  color: #fff;
+  color: #333;
   transition: text-shadow 0.2s linear;
 }
 aside a:hover {
-  color: #eee;
+  color: #C50E1F;
   text-shadow: 0 0 1.5em #fff, 0 0 2.5em #fff;
 }
 aside h1 {
@@ -232,15 +240,15 @@ aside nav li {
   line-height: 1.6em;
 }
 aside nav li:nth-of-type(-n+4) { /* hard-coded; CSS has no concept of "half" */
-  text-align: right;
+  text-align: left;
 }
 @media screen and (min-width: 768px) {
   aside {
-    padding: 36px 0;
+    padding: 0px 0;
   }
   aside nav ul {
     columns: auto; -moz-columns: auto; -webkit-columns: auto;
-    text-align: center;
+    text-align: left;
   }
   aside nav li:nth-of-type(-n+4) {
     text-align: inherit;
@@ -273,7 +281,7 @@ blockquote::before {
 }
 
 footer {
-  border-top: #eee 1px solid;
+  border-top: #F49F90 1px solid;
   line-height: 0.7em;
   padding: 1em 0;
 }
@@ -326,13 +334,13 @@ footer span.break {
 }
 
 section {
-  border-bottom: #eee 0px solid;
+  border-bottom: #C50E1F 0px solid;
   overflow: hidden;
 }
 
 
-section:nth-child(2n) { background-color: #f6f6f6; }
-section:first-of-type { border-top: #eee 3px solid; }
+section:nth-child(2n) { background-color: #C50E1F; }
+section:first-of-type { border-top: #C50E1F 3px solid; }
 h2 + section          { border-top: 0; } /* unless immediately preceded by a header */
 section:last-of-type  { border: 0; }
 
@@ -596,7 +604,7 @@ div.rightside {
 }
 
 .highlight {
-    color:#d9411e;
+    color:#C50E1F;
 }
 
 table {
@@ -607,4 +615,12 @@ th, td {
   padding: 12px;
   text-align: left;
 }
+
+
+#rightside{
+margin: 20px;
+}
+
+
+
 
