--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -22,6 +22,10 @@
   {% endif %}
 
   <link rel="license" hreflang="en" href="{{ SITEURL }}/copyright.html" />
+  
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
 </head>
 
 <body>
