aside again corrected order for mobile version

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -46,51 +46,7 @@
     </nav>
   </aside>
 
-
-  <aside id='right'>
-	  <h5 style="margin-block-end: 0;"><strong>Computational <br> Psychology</strong></h5>
-	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
-		  Prof. Dr. Marianne Maertens <br>
-	  <small>
-		 Room: MAR 5.018 <br>
-	  Phone: +49 (0)30/314-24478  <br>
-	  Email: marianne.maertens@tu-berlin.de<br>
-	  Office hours: on appointment<br>
-	  </small>
-	  </p>
-  	  <!-- <hr> -->
-
-  	  <h5 style="margin-block-end: 0;"><strong>Administration</strong></h5>
-
-	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
-		  Bianca del Mestre<br>
-	  <small>
-		 Room: MAR 5.019<br>
-	  Phone: +49 (0)30 314-75771<br>
-	  Email: bianca.delmestre@tu-berlin.de<br>
-	  Office hours: Mon-Wed 10 a.m.-12 p.m.<br>
-	  </small>
-	  </p>
-	  
-	  <!-- <hr> -->
-	  <h5 style="margin-block-end: 0;"><strong>Address</strong></h5>
-
-	 <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
-	  <small>
-	  Technische Universität Berlin<br>
-	  Institute of Software Engineering <br>
-	  and Theoretical Computer Science<br>
-	  Dept. Computational Psychology<br>
-	  Sek. MAR 5-5<br>
-	  Marchstr. 23, 10587 Berlin<br>
-	  Germany
-	  </small>
-	  </p>
-	  
-
-	  
-  </aside>
-    
+   
   <main>
     <div id='content'>
     {% block content %}{% endblock %}
@@ -104,6 +60,46 @@
     </footer>
   </main>
 
-  
+    <aside id='right'>
+	  <h5 style="margin-block-end: 0;"><strong>Computational <br> Psychology</strong></h5>
+	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
+		  Prof. Dr. Marianne Maertens <br>
+	  <font size="+0.5">
+		 Room: MAR 5.018 <br>
+	  +49 (0)30/314-24478  <br>
+	  marianne.maertens@tu-berlin.de<br>
+	  Office hours: on appointment<br>
+	  </font>
+	  </p>
+  	  <!-- <hr> -->
+
+  	  <h5 style="margin-block-end: 0;"><strong>Administration</strong></h5>
+
+	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
+		  Bianca del Mestre<br>
+	  <font size="+0.5">
+		 Room: MAR 5.019<br>
+	  +49 (0)30 314-75771<br>
+	  bianca.delmestre@tu-berlin.de<br>
+	  Office hours: Mon-Wed 10 a.m.-12 p.m.<br>
+	 </font>
+	  </p>
+	  
+	  <!-- <hr> -->
+	  <h5 style="margin-block-end: 0;"><strong>Address</strong></h5>
+
+	 <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
+	  <font size="+0.5">
+	  Technische Universität Berlin<br>
+	  Institute of Software Engineering and Theoretical Computer Science<br>
+	  Dept. Computational Psychology<br>
+	  Sek. MAR 5-5<br>
+	  Marchstr. 23, 10587 Berlin<br>
+	  Germany
+	  </font>
+	  </p>
+	 
+	  
+  </aside>
 </body>
 </html>
