--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -113,9 +113,6 @@ p #right{
   margin: 0em 0;
 }
 
-small {
-  font-size: small;
-}
 
 article h1 {
   margin-bottom: 0;
@@ -147,7 +144,6 @@ section, div.section {
     position: fixed; top: 0; left: 0;
     overflow-x: hidden;
     overflow-y: auto;
-    /*border-right: 4px solid #C50E1F;*/
   }
 
   main {
@@ -158,13 +154,13 @@ section, div.section {
   }
   
   #right{
-    width: 20%;
+    width: 16%
     height: 100%;
-    padding-right: 20px;
+    padding-right: 0px;
     padding-top: 0px;
     position: fixed; top: 0; left: 80%;
     text-align: left;
-    padding-left: 20px;
+    padding-left: 10px;
     border-left: 4px solid #C50E1F;
   }
   
