--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -16,14 +16,14 @@
   <!-- <link rel="manifest" href="/manifest.json"> -->
   <meta name="theme-color" content="#000000">
 
-  <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/style.css">
+  <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/style.css?version=5">
   {% if page and page.url == "index.html" %}
   <style>aside img { display: unset; }</style>
   {% endif %}
 
   <link rel="license" hreflang="en" href="{{ SITEURL }}/copyright.html" />
   
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
 </head>
@@ -64,12 +64,12 @@
 	  <h5 style="margin-block-end: 0;"><strong>Computational <br> Psychology</strong></h5>
 	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
 		  Prof. Dr. Marianne Maertens <br>
-	  <font size="+0.5">
+	  <small>
 		 Room: MAR 5.018 <br>
 	  +49 (0)30/314-24478  <br>
 	  marianne.maertens@tu-berlin.de<br>
 	  Office hours: on appointment<br>
-	  </font>
+	  </small>
 	  </p>
   	  <!-- <hr> -->
 
@@ -77,26 +77,27 @@
 
 	  <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
 		  Bianca del Mestre<br>
-	  <font size="+0.5">
+	  <small>
 		 Room: MAR 5.019<br>
 	  +49 (0)30 314-75771<br>
 	  bianca.delmestre@tu-berlin.de<br>
 	  Office hours: Mon-Wed 10 a.m.-12 p.m.<br>
-	 </font>
+	 </small>
 	  </p>
 	  
 	  <!-- <hr> -->
 	  <h5 style="margin-block-end: 0;"><strong>Address</strong></h5>
 
 	 <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
-	  <font size="+0.5">
+	  <small>
 	  Technische Universität Berlin<br>
-	  Institute of Software Engineering and Theoretical Computer Science<br>
+	  Institute of Software Engineering and<br>
+	  Theoretical Computer Science<br>
 	  Dept. Computational Psychology<br>
 	  Sek. MAR 5-5<br>
 	  Marchstr. 23, 10587 Berlin<br>
 	  Germany
-	  </font>
+	  </small>
 	  </p>
 	 
 	  
