--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -632,11 +632,15 @@ table {
   border-collapse: collapse;
 }
 
-th, td {
+td {
   padding: 12px;
   text-align: left;
 }
 
+th {
+  padding: 12px;
+  text-align: center;
+}
 
 #rightside{
 margin: 20px;
