--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -16,7 +16,7 @@
   <!-- <link rel="manifest" href="/manifest.json"> -->
   <meta name="theme-color" content="#000000">
 
-  <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/style.css?version=17">
+  <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/style.css?version=18">
   {% if page and page.url == "index.html" %}
   <style>aside img { display: unset; }</style>
   {% endif %}
@@ -55,7 +55,7 @@
     <footer>
       <p><small>
         content licensed <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">cc-by-sa</a>
-        <span class='break'>—</span> ©2019 {{ AUTHOR }} <span class='break'></span>
+        <span class='break'>—</span> ©2019 - 2020 {{ AUTHOR }} <span class='break'></span>
       </small></p>
     </footer>
   </main>
