--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -91,8 +91,8 @@
 	 <p style="margin-block-start: 0.5em; margin-block-end: 3em;">
 	  <small>
 	  Technische Universität Berlin<br>
-	  Institute of Software Engineering and<br>
-	  Theoretical Computer Science<br>
+	  Institute of Computer Engineering and<br>
+	  Microelectronics<br>
 	  Dept. Computational Psychology<br>
 	  Sek. MAR 5-5<br>
 	  Marchstr. 23, 10587 Berlin<br>
